# google-oauth

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/: react_oauth_frontend.tsx
frontend/src/: App.tsx
